# cmd/api/main.go
@@ -7,6 +7,12 @@ import (
 	"syscall"
 	"time"
 
+	"github.com/go-redis/redis/v8"
+
+	"github.com/uday510/go-crud-app/internal/store/cache"
+
+	"github.com/uday510/go-crud-app/internal/auth"
+
 	"github.com/uday510/go-crud-app/internal/mailer"
 
 	"go.uber.org/zap"
@@ -26,8 +32,23 @@ func init() {
 
 const version = "0.0.1"
 
-// Swagger annotations omitted for brevity...
+//	@title			GopherSocial API
+//	@description	API for SocialNetwork,
+//	@termsOfService	http://swagger.io/terms/
 
+//	@contact.name	API Support
+//	@contact.url	http://www.swagger.io/support
+//	@contact.email	support@swagger.io
+
+//	@license.name	Apache 2.0
+//	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @BasePath					/v1
+//
+// @securityDefinitions.apikey	ApiKeyAuth
+// @in							header
+// @name						Authorization
+// @description
 func main() {
 	log.Println("loading configuration...")
 
@@ -41,12 +62,29 @@ func main() {
 			maxIdleConns: env.GetInt("DB_MAX_IDLE_CONNECTIONS", 30),
 			maxIdleTime:  env.GetString("DB_MAX_IDLE_TIME", "15m"),
 		},
+		redisCfg: redisConfig{
+			addr:    env.GetString("REDIS_ADDR", "localhost:6379"),
+			pw:      env.GetString("REDIS_PW", ""),
+			db:      env.GetInt("REDIS_DB", 0),
+			enabled: env.GetBool("REDIS_ENABLED", false),
+		},
 		env: env.GetString("ENV", "development"),
 		mail: mailConfig{
 			expiry:    time.Hour * 24 * 3,
 			fromEmail: env.GetString("FROM_EMAIL", ""),
 			sendGrid: sendGridConfig{
 				apiKey: env.GetString("SENDGRID_API_KEY", ""),
+			},
+		},
+		auth: authConfig{
+			basic: basicConfig{
+				user: env.GetString("AUTH_BASIC_USER", "admin"),
+				pass: env.GetString("AUTH_BASIC_PASS", "admin"),
+			},
+			token: tokenConfig{
+				secret: env.GetString("AUTH_TOKEN_SECRET", "fallback"),
+				exp:    time.Hour * 24 * 3,
+				iss:    "socialnetwork",
 			},
 		},
 	}
@@ -72,6 +110,12 @@ func main() {
 	}
 	logger.Info("database connection pool established")
 
+	var redisDB *redis.Client
+	if cfg.redisCfg.enabled {
+		redisDB = cache.NewRedisClient(cfg.redisCfg.addr, cfg.redisCfg.pw, cfg.redisCfg.db)
+		logger.Info("redis cache connection established")
+	}
+
 	defer func() {
 		logger.Info("closing database connection...")
 		if err := database.Close(); err != nil {
@@ -83,14 +127,19 @@ func main() {
 
 	logger.Info("initializing storage layer...")
 	newStorage := store.NewStorage(database)
+	cacheStorage := cache.NewRedisStorage(redisDB)
 
-	mailtrap := mailer.NewSendgrid(cfg.mail.sendGrid.apiKey, cfg.mail.fromEmail)
+	newMailer := mailer.NewSendgrid(cfg.mail.sendGrid.apiKey, cfg.mail.fromEmail)
+
+	jwtAuthenticator := auth.NewJWTAuthenticator(cfg.auth.token.secret, cfg.auth.token.iss, cfg.auth.token.iss)
 
 	app := &application{
-		config: cfg,
-		store:  newStorage,
-		logger: logger,
-		mailer: mailtrap,
+		config:        cfg,
+		store:         newStorage,
+		cacheStorage:  cacheStorage,
+		logger:        logger,
+		mailer:        newMailer,
+		authenticator: jwtAuthenticator,
 	}
 
 	mux := app.mount()
